// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paschalTriduum should match snapshot 1`] = `
[
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "holyThursday": {},
      "yearOffset": 0,
    },
    "dayOfWeek": 4,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:thursday_of_the_lords_supper",
    ],
    "liturgicalDayId": "thursday_of_the_lords_supper",
    "periods": [
      {
        "key": "HOLY_WEEK",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 0,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [
      "RED",
    ],
    "dateDef": {
      "goodFriday": {},
      "yearOffset": 0,
    },
    "dayOfWeek": 5,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:friday_of_the_passion_of_the_lord",
    ],
    "liturgicalDayId": "friday_of_the_passion_of_the_lord",
    "periods": [
      {
        "key": "HOLY_WEEK",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 1,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [],
    "dateDef": {
      "holySaturday": {},
      "yearOffset": 0,
    },
    "dayOfWeek": 6,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:holy_saturday",
    ],
    "liturgicalDayId": "holy_saturday",
    "periods": [
      {
        "key": "HOLY_WEEK",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 2,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "easterSunday": {},
      "yearOffset": 0,
    },
    "dayOfWeek": 0,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:easter_sunday",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "easter_sunday",
    "periods": [
      {
        "key": "EASTER_OCTAVE",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 3,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
      {
        "dayOfSeason": 1,
        "key": "EASTER_TIME",
        "weekOfSeason": 1,
      },
    ],
  },
]
`;

exports[`paschalTriduum should match snapshot with year offset to +1 1`] = `
[
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "holyThursday": {},
      "yearOffset": 1,
    },
    "dayOfWeek": 4,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:thursday_of_the_lords_supper",
    ],
    "liturgicalDayId": "thursday_of_the_lords_supper",
    "periods": [
      {
        "key": "HOLY_WEEK",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 0,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [
      "RED",
    ],
    "dateDef": {
      "goodFriday": {},
      "yearOffset": 1,
    },
    "dayOfWeek": 5,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:friday_of_the_passion_of_the_lord",
    ],
    "liturgicalDayId": "friday_of_the_passion_of_the_lord",
    "periods": [
      {
        "key": "HOLY_WEEK",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 1,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [],
    "dateDef": {
      "holySaturday": {},
      "yearOffset": 1,
    },
    "dayOfWeek": 6,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:holy_saturday",
    ],
    "liturgicalDayId": "holy_saturday",
    "periods": [
      {
        "key": "HOLY_WEEK",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 2,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "easterSunday": {},
      "yearOffset": 1,
    },
    "dayOfWeek": 0,
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:easter_sunday",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "easter_sunday",
    "periods": [
      {
        "key": "EASTER_OCTAVE",
      },
    ],
    "precedence": "01_TRIDUUM",
    "seasons": [
      {
        "dayOfSeason": 3,
        "key": "PASCHAL_TRIDUUM",
        "weekOfSeason": 1,
      },
      {
        "dayOfSeason": 1,
        "key": "EASTER_TIME",
        "weekOfSeason": 1,
      },
    ],
  },
]
`;
